Mon Nov 26 14:11:46 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection_doctest1.txt: Windows doesn't give a
	  detail for why a DatabaseLockError can't be obtained, so make the
	  test case more flexible there.

Mon Nov 26 12:36:38 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/runtests.py: Delete entries in the dictionary before
	  calling teardown; should help avoid trying to delete open files
	  on windows.

Sun Nov 18 15:45:26 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/replaylog.py: New file - allows all calls to xapian to be
	  logged, such that they could be replayed later for debugging.
	  Has rather an unpleasant implementation, but as a result has
	  minimal impact when not turned on - I've not been able to measure
	  any performance impact incurred when not logging.
	* xappy/__init__.py: Expose new function "set_replay_path" used to
	  start logging.
	* xappy/marshall.py, xappy/fieldactions.py,
	  xappy/datastructures.py, xappy/indexerconnection.py,
	  xappy/searchconnection.py: Hook into the replay logging.

Sun Nov 18 15:44:50 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/runtests.py: Run without profiling by default - much
	  faster.

Thu Nov 15 08:38:18 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/runtests.py: Allow coverage and profiling measures to
	  be turned on and off easily (not yet with command line options,
	  but now only needs a simple edit to the code).

Wed Nov 07 17:45:48 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add extra "query" parameter to
	  summarise() and highlight() methods, which can be used to
	  override the query used as the basis of the highlighting.

Wed Nov 07 17:30:02 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py: Fix tests to correspond to recent change.
	* xappy/searchconnection.py: Add "query_none()" to get an empty