@@ -163,9 +163,13 @@ def teardown_test(dtobj):
     """Cleanup after running a test.
 
     """
-    for key in list(dtobj.globs.iterkeys()):
-        if not key.startswith('_'):
-            del dtobj.globs[key]
+    for key, val in list(dtobj.globs.iteritems()):
+        if hasattr(val, '__module__') and val.__module__.startswith('xappy'):
+            if hasattr(val, 'close'):
+                if not isinstance(val, type):
+                    val.close()
+        del dtobj.globs[key]
+    dtobj.globs.clear()
     tmpdir = 'test_tmp'
     os.chdir(_orig_vals['wd'])
     sys.path = _orig_vals['path']
