@@ -1,3 +1,8 @@
+Mon Nov 26 14:51:24 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* testsuite/runtests.py: Call close methods on anything from xappy
+	  which has one when cleaning up.
+
 Mon Nov 26 14:11:46 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/indexerconnection_doctest1.txt: Windows doesn't give a
